Opened 13 years ago
Closed 13 years ago
#995 closed bug (fixed)
wait() should return with an error when the process has no children
Reported by: | korli | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
wait() should return with an error when the process has no children. At the moment, it doesn't return and wait for ever.
See src/tests/system/kernel/wait_test.c to reproduce. The problem is also present when using latest Flex.
Note:
See TracTickets
for help on using tickets.
I have a local fix here, I'll commit it later.