* wait_for_child() now checks if the team has any children to wait for, and returns   ECHILD in case it doesn't. This fixes bug #995. * Added a TODO item for solving bug #996. * wait_for_child() did not release the team lock and restore interrupts in case   the child you wanted to wait for didn't exist... * with child > 0, wait_for_child() will now check if its really a child of yours,   and not just in the same process group.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19993 a95241bf-73f2-0310-859d-f6bbb57e9c96